docs: 扩展面试题库到 50 题（覆盖 11 大类）
重写 INTERVIEW.md，结构化整理 50 个面试题：

11 大类（按重要性排序）：
1. 项目介绍（3题）
2. 后端基础 Spring Boot（6题）
3. MySQL 数据库（7题）
4. Redis 缓存（4题）
5. Kafka 消息队列（4题）
6. 分布式与一致性（5题）
7. 性能调优与监控（5题）
8. 搜索 Elasticsearch（3题）
9. RAG / Agent 重点（6题）
10. 架构设计（4题）
11. 行为面试软技能（3题）

每题结构：
- 候选人角度的实际回答（基于简历真实数据）
- 3-5 个面试官常追问的 follow-up 问题
- 简历硬数据（92% 召回率 / 1.5s 首问 / 30% 内存节省）的计算方式

重点题标记：JWT 双令牌、千万级计数器 SDS、RAG 召回率优化、
首问 RT 优化、大模型幻觉防护、SSE 流式、CAP 理论等 9 道必问题。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>